Wrote some more

--- a/discussion.Rmd
+++ b/discussion.Rmd
@@ -12,13 +12,33 @@ However, despite all of these relative successes, both the theoretical model and
  
 ## Limitations of the theoretical model
 
-Firstly, it is important discuss the limitations of the theoretical model described in Section \@ref(problems). This model conceptualizes the data visualization pipeline as a structure-preserving mapping - a functor - from the space of ordered data subsets to the space of graphics. This relies on the key assumption that, if we start with a structured object - a hierarchy of data partitions made out of subsets ordered by set inclusion/union - the subsequent steps of the data visualization pipeline should not discard this structure arbitrarily. Instead, transformations of data into summary statistics and aesthetic encodings should preserve the inherent hierarchical relationships. This naturally leads us to groups and monoids.
+It is first important discuss the limitations of the theoretical model presented in this thesis. This model, described in Section \@ref(problems), conceptualizes the data visualization pipeline as a structure-preserving mapping, also known as a functor. Specifically, a key initial assumption is that, when visualizing data, we start with a hierarchy of data subsets. These subsets are disjoint (share no overlapping data) and are ordered by set inclusion/union. To produce meaningful graphics, the subsequent steps of the data visualization pipeline should preserve this inherent structure. In plain words, the transformations of data into summary statistics and of statistics into aesthetics should also *behave like set union*. In category theoretic terms, this means that the summarizing function and the rendering process have to be functors. Based on the properties of set union, this naturally identifies algebraic structures known as groups and monoids. 
 
-One immediate critique is that the data partition hierarchy model does not describe all possible plot types. For instance, it precludes visualizations where geometric objects within the same graphical layer represent overlapping data subsets, as seen, for example, in certain visualizations of set-typed data [see Section \@ref(comparison-disjointness), also e.g. @alsallakh2014]. However, these types of visualizations are fairly rare. In the vast majority of standard plots - including barplots, histograms, density plots, scatterplots, lineplots, and parallel coordinate plots, among others - each geometric object represents a distinct subset of cases, independent from the rest, and the objects may combine together to form well-behaved, part-whole relationships. Further, as discussed in in Section \@ref(comparison-disjointness), this tendency towards disjoint representations does not seem to be a mere convention or accident, but instead likely stems from some fundamental mathematical and cognitive properties of disjointness and independence. Thus, while non-disjoint plots may be useful in certain specialized circumstances, disjointness seems to provide a good, general model.
+The proposed model of the data visualization pipeline naturally raises several questions and potential criticisms, some of which have been already discussed in Section \@ref(problems). These will be further reviewed and expanded upon in the following subsections. My objective is to clearly articulate the model's advantages, while also acknowledging its limitations and suggesting opportunities for future work.
+
+### Why the model is necessary
+
+First, let's briefly reiterate why the model is even necessary. As discussed in Section \@ref(partitioning), when visualizing data, we render geometric objects representing parts of our data set. We establish these parts by conditioning on discrete variable, such as a categorical variable in a barplot or a binned continuous variable in a histogram. Often, we also want to further subdivide these parts by conditioning on another variable or variables. In particular, in interactive data visualization, this nested conditioning is a pre-requisite of linked selection, which naturally partitions the data according to the selection status.
+
+After being subdivided into parts, the data is summarized via summary statistics and rendered as geometric objects. Importantly, the rendered objects should reflect the hierarchical part-whole structure created by the partitioning. This is the case with techniques like stacking, which represent the subdivided data subsets as highlighted parts of whole objects. While alternative techniques such as dodging or layering do exist, they provide a subpar solution for interactive graphics (see Section \@ref(stacking-part-whole)). 
+
+However, a key insight is that the graphical representation is *not* independent of the way we summarize our data. Specifically, as discussed in Section \@ref(stackable-or-not), regarding stacking, past data visualization researchers have noted the fact that while some summary statistics such as sums or counts can be effectively stacked, others like averages or quantiles cannot [see e.g. @wilke2019; @wills2011; @wu2022]. For instance, while the sum of sums or maximum of maximums represent valid overall statistics, the average of averages is different from grand mean.
+
+Thus, when implementing data visualization features like linked selection, it is really useful to know which summary statistics will play well with the part-whole (stacking) model. As demonstrated throughout Section \@ref(problem), this idea can be formalized by identifying the fundamental underlying operation as set union - the data representing parts of objects is combined together to form a whole, and so should the derived summary statistics. This naturally leads to some algebraic ideas that will be explored in the following subsections.
+
+### Disjointness
+
+A point which is important to discuss early is that the partition hierarchy model does not describe *all* types of plots in use today. For instance, it precludes visualizations where geometric objects within the same graphical layer represent overlapping data subsets, as seen, for example, in certain visualizations of set-typed data [see e.g. @alsallakh2014] or two-dimensional kernel density plots (see Section \@ref(comparison-disjointness)). However, these visualizations represent a fraction of available plot types. In the vast majority of "standard" plots - including barplots, histograms, scatterplots, density plots, heatmaps, violin plots, boxplots, lineplots, and parallel coordinate plots - each geometric object represents a distinct subset of cases^[As a short exercise, I tried going through `ggplot2`'s list of [`geoms`](https://ggplot2.tidyverse.org/reference/) and identifying all non-disjoint data representations. The only examples I have been able to find have been find were `geom`s based on two-dimensional kernel density estimates, i.e. `geom_density_2d` and `geom_density_2d_filled` (each line or polygon represents densities computed across all datapoints).].
+
+Further, in Section \@ref(comparison-disjointness), I argued that this tendency towards disjoint data representations is not a mere convention or accident, but instead stems from a fundamental naturality of disjointness. Disjointness underlies many fundamental concepts in statistics, programming, and mathematics, and, in general, seems to align better with our cognitive processes (see Section \@ref(comparison-disjointness)). Put simply, reasoning about objects which are disjoint is easier than about objects which are entangled [see also @hickey2011].
+
+Thus, while not the exclusive model, I argue that disjointness provides a good general model for data visualization, just as it does in the other fields mentioned above. Furthermore, disjointness seems to be particularly well-suited to interactive data visualization, and, conversely, with non-disjoint data representations, many interactive features may prove difficult or even impossible to implement. For instance, how would one implement non-trivial linked selection (or querying) with a two-dimensional kernel density plot, without referring to the underlying (disjoint) data points? Like manipulating objects in the real world, I content that it is far easier to interact with geometric objects that represent distinct data entities.  
+
+###
 
 Another potential point of contention are the limitations that the model imposes. Requiring that all graphics and the underlying summary statistics are (monotonic, commutative) monoids or groups excludes a non-trivial fraction of popular plot types. For instance, boxplots are entirely made out of non-monoidal summary statistics, nevertheless, they have been successfully implemented alongside linked selection in some interactive data visualization packages [see e.g. @theus2002; @urbanek2011]. However, the point of the model is not to say that certain kinds of visualizations can never be reconciled with linked selection, instead, it is to easily identify certain "natural" types of visualization where linked selection is inherently compatible. We are free to violate this naturality when we see fit, however, we should be aware of the fact that the reconciliation of these non-compliant visualizations may require some ad-hoc solutions. 
 
-## Limitations of the software packages
+## Limitations of the software
 
 During this project, I had time to think through and test out different implementations of the various features of the interactive data visualization system. While I succeeded in some areas, there were also areas which could still use some improvement. 
 
