--- a/references.bib
+++ b/references.bib
@@ -2270,6 +2270,13 @@
 	url = {https://developer.mozilla.org/en-US/docs/Web/API/WebSocket}
 }
 
+@book{blitzstein2019,
+  title={Introduction to probability},
+  author={Blitzstein, Joseph K and Hwang, Jessica},
+  year={2019},
+  publisher={Chapman and Hall/CRC}
+}
+
 @Misc{		  melicharova2025,
   author	= {Melicharová, Hana},
   date		= {2025-01-09},
@@ -3376,6 +3383,17 @@
   note		= {[Online; accessed 16. Mar. 2023]},
   url		= {https://www.tableau.com}
 }
+
+@article{benjamin2019,
+  title={Errors in probabilistic reasoning and judgment biases},
+  author={Benjamin, Daniel J},
+  journal={Handbook of Behavioral Economics: Applications and Foundations 1},
+  volume={2},
+  pages={69--186},
+  year={2019},
+  publisher={Elsevier}
+}
+
 
 @Article{	  tager1979,
   title		= {Effect of parental cigarette smoking on the pulmonary
